# RAS

./: .gitignore  Data Throughput Monitoring Code  Simplified Window Camera File.py  TestIP6.py  ekf_wheel_only.yaml  launch.txt  robot_description.urdf.xacro  view_robot.launch.py
260308_Antenna_Raise_Lower/: 260308_Antenna_Raise_Lower.ino
Camera/: EMAG_TEST_GUI.py  armik.py  armik_og.py  marvinv2.py  new_camera_gui.py
IK_code/: # two_link_plotter.py  armik.py
RAS Teensy Sketchs/: 2026_Old_Arm_Emag_toggle.ino  2026_Old_Arm_Steppers.ino  Controls for science.odt  Controls for science.txt
RAS Teensy Sketchs/2026_Old_arm_servos/: 2026_Old_arm_servos.ino
RAS Teensy Sketchs/241203_Actuator/: 241203_Actuator.ino
RAS Teensy Sketchs/250212_Serial_Testing/: 250212_Serial_Testing.ino
RAS Teensy Sketchs/250310_Arm_Code/: 250310_Arm_Code.ino
RAS Teensy Sketchs/250312_Science_Final/: 250312_Science_Final.ino
RAS Teensy Sketchs/250320_raise_lower_working/: 250320_raise_lower_working.ino
RAS Teensy Sketchs/250510_Microros_example/: 250510_Microros_example.ino
RAS Teensy Sketchs/250603_Throttle_Control/: 250603_Throttle_Control.ino
RAS Teensy Sketchs/250923_IK_logging_arm/: 250923_IK_logging_arm.ino
RAS Teensy Sketchs/260308_Antenna_Raise_Lower/: 260308_Antenna_Raise_Lower.ino  Mast Raising Instructions
Simple_Autonomous/: autonomous_launch.sh  ekf_wheel_only.yaml  joint_state_publishing.py  launch.txt  pointnav.launch.py  pointnav_goalpublisher.py  robot_description.urdf.xacro  waypoint.yaml  wheel_odometry_node.py
Stereo/: README.md  coverage_local.py  coverage_receiver_v5.py  coverage_sender_v5.py  local_ply_capture.py  reciever_cam.py  sender.py
point_nav/: MOVING.md  QUICKSTART.md  README.md  TODO.md  package.xml  setup.cfg  setup.py
point_nav/config/: ekf_fusion.yaml  goal_inputs.defaults.yaml  point_nav.defaults.yaml
point_nav/launch/: point_nav.launch.py
point_nav/point_nav/: joint_state_publishing.py  point_nav_node.py  set_goal_cli.py  wheel_odometry_node.py
point_nav/tools/: Launch Zed Cameras.sh  setup_ws.sh  update_todo.py
point_nav/urdf/: point_nav_rover.urdf  robot_description.urdf.xacro
point_nav_old/: QUICKSTART.md  README.md  TODO.md  package.xml  setup.py
(+16 files in other folders)
